[tool.poetry]
name = "olh-dagster"
version = "0.1.0"
description = "POC Dagster in Open source lakehouse stack"
authors = ["leehuwuj <leehuwuj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dagit = "1.6.6"
dagster = "1.6.6"
dagster-postgres = "0.22.6"
dagster-aws = "0.22.6"
dagster-k8s = "0.22.6"
dagster-dbt = "^0.22.6"
dagster-pyspark = "0.22.6"
pandas = "^2.2.1"
trino = "^0.328.0"
deltalake = "^0.15.3" 
pyarrow = "^15.0.0"
dbt-core = "^1.7.8"
dbt-trino = "^1.7.1"
pyspark = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
